# KRAonCKKS

./: .gitignore  README.md
OpenFHE/: CMakeLists.txt  README.md  graphs.py  openfhe_attack.cpp  statistics_16384.pickle  test_data.py  utils.py
